--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="bg-gray-200 text-black dark:bg-gray-900 dark:text-gray-100">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
